--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-08-01 21:57:10
+lastsearch = 2024-08-02 01:46:39
 
 [hk.linkedin.com]
-match = -23.1%%
-title = Coco Chan - Wellesley
-url = https://hk.linkedin.com/in/coco-chan-734351222
+match = -123.1%%
+title = Chan cocoo - Freelance (Self employed)
+url = https://hk.linkedin.com/in/chan-cocoo-2aa4362b1
 
 [www.instagram.com]
-match = -238.5%%
-title = Coco Chan (@cocopops072) • Instagram photos and videos
-url = https://www.instagram.com/cocopops072/?hl=en
+match = -230.8%%
+title = Hoi Chan (@hoichandraws) • Instagram photos and videos
+url = https://www.instagram.com/hoichandraws/?hl=en
 
 [www.solunafineart.com]
 match = -22.2%%
@@ -32,9 +32,9 @@ title = That Mama: Coco Chan, Founder Of Voltage PR And Co- ...
 url = https://www.sassymamahk.com/coco-chan-voltage-pr-omsa-family-life/
 
 [www.tiktok.com]
-match = -307.7%%
-title = #stitch with @Steven Chan Hoi Sing I broke my leg running to ...
-url = https://www.tiktok.com/@mamakkofficial/video/7371338212553280811
+match = -284.6%%
+title = #collage avec @Steven Chan Hoi Sing ce son me motive !#fit ...
+url = https://www.tiktok.com/@dosido6/video/7365180214156004641
 
 [admissions.hku.hk]
 match = -38.5%%
