--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-08-01 18:23:20
+lastsearch = 2024-08-02 01:49:30
 
 [scholar.google.com]
 match = -43.8%%
@@ -92,9 +92,9 @@ title = maps/@21.001139,105.847882,17z?hl=vi
 url = https://www.google.com/maps/@21.001139,105.847882,17z?hl=vi
 
 [www.facebook.com]
-match = -212.5%%
-title = Đại sứ quán Việt Nam tại UAE - Viet Nam Embassy in the ...
-url = https://www.facebook.com/DSQVietNamtaiUAE/
+match = 6.2%%
+title = Người Việt Houston
+url = https://www.facebook.com/groups/NguoiVietHouston/
 
 [www.cgv.vn]
 match = -143.8%%
@@ -107,14 +107,14 @@ title = Chiếu lạc - Hưng Liên
 url = http://hunglien.net/san-pham/chieu-lac/
 
 [primagold.com.vn]
-match = -218.8%%
-title = Giá vàng 9999 hôm nay tại 64 tỉnh 1/8/2024 | Bảng giá vàng
+match = -225.0%%
+title = Giá vàng 9999 hôm nay tại 64 tỉnh 2/8/2024 | Bảng giá vàng
 url = https://primagold.com.vn/
 
 [www.youtube.com]
-match = -212.5%%
-title = Giá vàng hôm nay 16/12 | Vàng nữ trang 24K và 18K tăng ...
-url = https://www.youtube.com/watch?v=dn30Sg_9U3w
+match = -181.2%%
+title = Có gì ở CÕI TÂY PHƯỢC CỰC LẠC - Làm sao ta có thể đến ...
+url = https://www.youtube.com/watch?v=bHPLakg5INc
 
 [books.google.com]
 match = -156.2%%
