--- a/images/nem-foam-dreamland-uc-180x200x20/config.ini
+++ b/images/nem-foam-dreamland-uc-180x200x20/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-180x200x20.html
 lastopen = 2024-06-07 00:24:18
 
 [search]
-lastsearch = 2024-08-02 01:24:04
+lastsearch = 2024-08-02 01:59:26
 
 [www.diepxuan.com]
 match = 40.6%%
 title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
-url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html?srsltid=AfmBOoqfmEQ7wjPFWvWiMYoYhWT02egygLHW7XNqcbVgD3zkc5yh0ncj
+url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
 
 [demxanh.com]
 match = -6.2%%
 title = Đệm bông ép Dreamland giá rẻ, chính hãng tại Hà Nội
-url = https://demxanh.com/dem-bong-ep-dreamland.html?srsltid=AfmBOopD6mumnS2Za7yjHDBENuIWiC4byPfMzLT_HIy_nfFhx7rlHluo
+url = https://demxanh.com/dem-bong-ep-dreamland.html
 
 [changagoidemdep.vn]
 match = -12.5%%
