--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-08-02 00:20:45
+lastsearch = 2024-08-02 01:48:47
 
 [demxanh.com]
 match = -41.2%%
@@ -12,9 +12,9 @@ title = Thảm trải sàn Bali siêu khuyến mại
 url = https://demxanh.com/tham-trai-san-bali.html
 
 [tiki.vn]
-match = -105.9%%
-title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-p44108490.html?spid=160905191/
+match = -141.2%%
+title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm mã 30
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-30-p38118690.html
 
 [www.lazada.vn]
 match = -152.9%%
@@ -22,9 +22,9 @@ title = Thảm Trải Sàn 100%% Nhập Khẩu Cao Cấp, Sang Trọng ...
 url = https://www.lazada.vn/products/mua-tham-nhan-qua-tham-li-bali-tham-trai-san-100-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-i1557438611-s6573104309.html
 
 [thegioidemviet.vn]
-match = -182.4%%
-title = Thảm trải sàn Bali M1 cao cấp, giá tốt nhất trên thị trường
-url = https://thegioidemviet.vn/tham-trai-san-bali-m1/
+match = -152.9%%
+title = Thảm trải sàn Bali M3 mẫu đẹp, giá rẻ nhất thị trường
+url = https://thegioidemviet.vn/tham-trai-san-bali-m3/
 
 [sammas.vn]
 match = -111.8%%
@@ -33,8 +33,8 @@ url = https://sammas.vn/tham-li-ep-han-quoc-stha0011
 
 [shopee.vn]
 match = -200.0%%
-title = Thảm lì bali in họa tiết 5D cao cấp trang trí phòng khách ...
-url = https://shopee.vn/Thảm-trải-sàn-Thảm-lì-bali-in-họa-tiết-5D-cao-cấp-trang-trí-phòng-khách-phòng-ngủ-i.92889546.17769472611
+title = thảm lì bali in họa tiết 5d cao cấp trang trí phòng khách ...
+url = https://shopee.vn/Thảm-trải-sàn-thảm-lì-bali-in-họa-tiết-5d-cao-cấp-trang-trí-phòng-khách-phòng-ngủ-i.401842224.9433903363
 
 [vn.my-best.com]
 match = -176.5%%
