--- a/images/chieu-cay-cao-bang-a-14/config.ini
+++ b/images/chieu-cay-cao-bang-a-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-14.html
 lastopen = 2024-06-09 23:41:44
 
 [search]
-lastsearch = 2024-08-02 03:56:29
+lastsearch = 2024-08-02 04:44:03
 
 [demxanh.com]
 match = -60.9%%
@@ -17,9 +17,9 @@ title = Chiếu Trúc cao bằng 1.4 X 1.95
 url = https://www.lazada.vn/products/chieu-truc-cao-bang-14-x-195-i2173944158.html
 
 [shopee.vn]
-match = -56.5%%
-title = Chiếu Tre Cao bằng Nan to loại đẹp Mát Lạnh Mùa Hè ...
-url = https://shopee.vn/Chiếu-Trúc-Long-Chiếu-Tre-Cao-bằng-Nan-to-loại-đẹp-Mát-Lạnh-Mùa-Hè-Đủ-Tất-Cả-Các-Kích-Thước-i.126028938.19577907706
+match = 43.5%%
+title = Chiếu trúc cao bằng 1.4m x 1.95
+url = https://shopee.vn/Chiếu-trúc-cao-bằng-1.4m-x-1.95-i.79170238.1321077017
 
 [lombom.com]
 match = -60.9%%
