--- a/images/chieu-dieu-hoa-cao-su-120x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-120x190/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-120x190.html
 lastopen = 2024-06-06 16:55:18
 
 [search]
-lastsearch = 2024-08-02 00:54:13
+lastsearch = 2024-08-02 04:44:24
 
 [demxanh.com]
 match = 34.5%%
 title = Chiếu điều hòa cao su non Tencel xanh nhạt
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html?srsltid=AfmBOopqiYU0TBeRrmAQpBsCOaZR2TbrFinRAVFQzB-Y6xaroBqye78C
 
 [entershopping.vn]
-match = -13.8%%
-title = Chiếu điều hòa cao su non Tencel Xanh biển - chăn ga gối
-url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-xanh-bien.html
+match = 3.4%%
+title = Chiếu điều hòa cao su non Tencel vàng đậm - Hà Nội
+url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-vang-dam.html
 
 [demchinhhang.com]
 match = -20.7%%
@@ -28,13 +28,13 @@ url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-ngoc/
 
 [changagoidemdep.vn]
 match = -27.6%%
-title = Chiếu điều hòa cao su non Tencel hồng đất - Chăn ga gối đệm
-url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-hong-dat.html
+title = Chiếu điều hòa cao su non Tencel Xanh nhạt - Chăn ga gối đệm
+url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
 
 [thegioidemonline.com]
 match = 34.5%%
-title = Chiếu điều hòa cao su non Tencel Xanh biển
-url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-bien.html
+title = Chiếu điều hòa cao su non Tencel Xanh nhạt
+url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html?srsltid=AfmBOopIstBTTN9Pr22_HrKscgPVJM_Pbtu7N_w0NLaW5TbAZXxZrx0-
 
 [khodem.vn]
 match = 55.2%%
