--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-08-02 03:17:54
+lastsearch = 2024-08-02 04:30:20
 
 [shopee.vn]
 match = 25.0%%
@@ -52,9 +52,9 @@ title = Làng nghề dệt chiếu cói Phú Tân
 url = https://mia.vn/cam-nang-du-lich/lang-nghe-det-chieu-coi-phu-tan-lang-nghe-hon-tram-nam-tuoi-tai-phu-yen-2165
 
 [m.facebook.com]
-match = -175.0%%
-title = Sơ lược về làng nghề dệt chiếu tại Long Định - Cần Đước
-url = https://m.facebook.com/notes/cộng-đồng-long-an/sơ-lược-về-làng-nghề-dệt-chiếu-tại-long-định-cần-đước/402374479949088/
+match = 22.2%%
+title = Chieu Lac
+url = https://m.facebook.com/chieu.lac.73/
 
 [baolongan.vn]
 match = -125.0%%
@@ -122,9 +122,9 @@ title = DCINE Sóc Trăng
 url = https://www.dcine.vn/rap/dcine-soc-trang-1.html
 
 [www.facebook.com]
-match = -200.0%%
-title = Nữ kỹ sư cơ khí kém may mắn nhưng rất lạc quan Bạn thân ...
-url = https://www.facebook.com/100053568794663/videos/528453679512169/?__so__=permalink
+match = 6.2%%
+title = Người Việt Houston
+url = https://www.facebook.com/groups/NguoiVietHouston/
 
 [phatsuonline.vn]
 match = -200.0%%
