--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-08-02 03:26:02
+lastsearch = 2024-08-02 04:43:42
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -17,9 +17,9 @@ title = How I gutted my HOA : r/pettyrevenge
 url = https://www.reddit.com/r/pettyrevenge/comments/10fgrkx/how_i_gutted_my_hoa/
 
 [www.quora.com]
-match = -176.5%%
-title = What can I do when a Homeowner's Association pops up in ...
-url = https://www.quora.com/What-can-I-do-when-a-Homeowners-Association-pops-up-in-my-neighborhood-I-purchased-my-home-years-ago-and-I-specifically-wanted-somewhere-that-a-HOA-didnt-exist-Is-my-only-option-to-move-The-rules-have-already-been
+match = -164.7%%
+title = How can the HOA kick you out of your house when you ...
+url = https://www.quora.com/How-can-the-HOA-kick-you-out-of-your-house-when-you-own-it
 
 [lauragoodsonart.com]
 match = 47.1%%
@@ -262,9 +262,9 @@ title = HOA
 url = https://www.click2houston.com/topic/HOA/
 
 [www.tiktok.com]
-match = -76.5%%
-title = Im done with it #neighbors #hoa #creatine
-url = https://www.tiktok.com/@koltindarley/video/7309119538296065323
+match = -11.8%%
+title = HOA fined me for this #hoa
+url = https://www.tiktok.com/@koltindarley/video/7317753084510342443?lang=en
 
 [www.21alivenews.com]
 match = -123.5%%
