--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-08-02 03:37:45
+lastsearch = 2024-08-02 04:40:38
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -54,7 +54,7 @@ url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-ra
 [books.google.com]
 match = -123.8%%
 title = A Critical Pronouncing Dictionary, and Expositor of the ...
-url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKCt7Attl&sig=ACfU3U0t7rpWDyTngccCuJaLLEWZKpuawA&hl=en&sa=X&ved=2ahUKEwjp45_30tSHAxVSvokEHcuuB_IQ6AF6BAgfEAM
+url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKCt7Erqp&sig=ACfU3U2OqJA4KsElUgad4JKu_E7BaxHiWg&hl=en&sa=X&ved=2ahUKEwiWv8T-4NSHAxVtkYkEHQ73BPUQ6AF6BAgaEAM
 
 [www.diepxuan.com]
 match = -81.0%%
