--- a/images/nem-everon-160x200x14/config.ini
+++ b/images/nem-everon-160x200x14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-160x200x14.html
 lastopen = 2024-06-06 17:09:53
 
 [search]
-lastsearch = 2024-08-02 01:24:25
+lastsearch = 2024-08-02 04:27:57
 
 [everon.vip]
 match = -10.0%%
@@ -92,8 +92,8 @@ title = Nệm everon giá rẻ khuyến mãi kèm nhiều quà tặng tại TP .
 url = https://noithatken.com/nem/nem-everon/
 
 [everonvietnam.com]
-match = -152.4%%
-title = 160 X 200 | Page 32 Of 34 | Everon - Korean Pillows & Blankets
+match = -128.6%%
+title = 160 X 200 | Page 32 Of 34 | Everon - Korean Pillows & ...
 url = https://everonvietnam.com/en/kich-co/160-x-200/page/32/
 
 [nem.vn]
