--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-08-02 01:30:57
+lastsearch = 2024-08-02 04:34:47
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = Lien Claimants
 url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
 
 [profiles.ucsf.edu]
-match = 10.5%%
-title = Frederick Hecht, MD
-url = https://profiles.ucsf.edu/frederick.hecht
+match = 10.0%%
+title = Joan Hilton, DSc, MPH
+url = https://profiles.ucsf.edu/joan.hilton
 
 [cityofclovis.com]
 match = -65.0%%
@@ -24,12 +24,12 @@ url = https://cityofclovis.com/wp-content/uploads/2018/09/Expedited-Permit-Proce
 [studentaid.gov]
 match = -30.8%%
 title = App by School
-url = https://studentaid.gov/sites/default/files/fsawg/datacenter/library/2023-2024-app-data-by-school-q6.xls
+url = https://studentaid.gov/sites/default/files/fsawg/datacenter/library/2023-2024-app-data-by-school-q5.xls
 
 [www.ncbi.nlm.nih.gov]
-match = -165.0%%
-title = Use of Polymeric Nanoparticle Platform Targeting the Liver ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6506187/
+match = -130.0%%
+title = Uncoupling Proteins: Role in Insulin Resistance and ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3060851/
 
 [www.energy.gov]
 match = -95.0%%
