--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-08-02 03:44:46
+lastsearch = 2024-08-02 05:53:11
 
 [everon.com.vn]
 match = 14.8%%
 title = Bộ Chăn Ga Everon EPM 22063
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/?srsltid=AfmBOoqtF0AUV2QiPocgb9foc5OWL1I7CpjOc3rkgowEmOUqGVxA94B_
 
 [everon.online]
-match = -44.4%%
-title = Bộ Everon EPM22063
-url = https://everon.online/products/bo-everon-epm-22063
+match = -5.0%%
+title = [VIDEO] Bộ Chăn Ga Everon EPM22063 Chất Liệu Modal Cao ...
+url = https://everon.online/blogs/video/bo-everon-epm22063-co-gi-dac-biet
 
 [everonhn.com.vn]
 match = 14.8%%
@@ -29,7 +29,7 @@ url = https://www.everonvn.vn/chi-tiet/everon-epm24063.html
 [demxanh.com]
 match = 30.6%%
 title = Bộ chăn ga gối Everon modal EPM22063
-url = https://demxanh.com/bo-chan-ga-goi-everon-modal-epm22063.html
+url = https://demxanh.com/bo-chan-ga-goi-everon-modal-epm22063.html?srsltid=AfmBOoqTz9Jr0g3sej3wVMulIKcwX1xazwZg0F-uG65xLj0rk8QxO3lL
 
 [www.diepxuan.com]
 match = 100.0%%
