--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-08-02 01:32:41
+lastsearch = 2024-08-02 05:45:15
 
 [demxanh.com]
 match = -60.9%%
 title = Chăn lông cừu là gì? Nên chọn loại chăn lông cừu nào?
-url = https://demxanh.com/chan-long-cuu-la-gi-nen-chon-loai-chan-long-cuu-nao.html?srsltid=AfmBOormx2At0L20C7WDSmen8TrffxMYC440AomrKLOOxWg0t2txk8xK
+url = https://demxanh.com/chan-long-cuu-la-gi-nen-chon-loai-chan-long-cuu-nao.html
 
 [shopee.vn]
 match = 43.5%%
@@ -19,12 +19,12 @@ url = https://shopee.vn/Chăn-lông-KQ-đẹp-loại-5kg-i.67105795.1540972315
 [www.diepxuan.com]
 match = 8.7%%
 title = Chăn KQ không sóng 5kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html?srsltid=AfmBOoqYDMwplkrjBAA_NAliFFghySuM_34T0IVYlHPP4uukXZa3bENU
+url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html
 
 [thegioidemonline.com]
 match = 45.0%%
 title = Chăn lông KQ cao cấp
-url = https://thegioidemonline.com/chan-long-kq-ma-01.html?srsltid=AfmBOoq9ZGo-cfwJERmtut64cs7K7SoxyYmAx_62fuudCkUQ2UMGkSI_
+url = https://thegioidemonline.com/chan-long-kq-ma-01.html
 
 [www.youtube.com]
 match = -87.0%%
@@ -32,9 +32,9 @@ title = Nấu Nồi Lẩu Mắm Đầu Năm Nhúng Bắp Chuối Hột Ăn Một
 url = https://www.youtube.com/watch?v=_urBtuvQ-kQ
 
 [phongkhongkhongquan.vn]
-match = -78.3%%
-title = Đại đội 5 thực hiện tốt công tác tăng gia, chăn nuôi
-url = https://phongkhongkhongquan.vn/27726/dai-doi-5-thuc-hien-tot-cong-tac-tang-gia-chan-nuoi.html
+match = -82.6%%
+title = Tiểu đoàn Căn cứ Sân bay Nà Sản khắc phục khó khăn ...
+url = https://phongkhongkhongquan.vn/28375/tieu-doan-can-cu-san-bay-na-san-khac-phuc-kho-khan-tang-gia-chan-nuoi-tot.html
 
 [tamanhhospital.vn]
 match = -39.1%%
