--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-02 04:27:00
+lastsearch = 2024-08-02 05:51:51
 
 [en.wikipedia.org]
 match = -15.4%%
@@ -300,4 +300,14 @@ url = https://link.springer.com/article/10.1007/s11427-024-2643-1
 match = -182.4%%
 title = CD11c Monoclonal Antibody (N418), PerCP-Cyanine5.5 ...
 url = https://www.thermofisher.com/antibody/product/CD11c-Antibody-clone-N418-Monoclonal/45-0114-82
+
+[aasldpubs.onlinelibrary.wiley.com]
+match = -223.5%%
+title = Phylogenetic analysis of hepatitis C virus isolates and their ...
+url = https://aasldpubs.onlinelibrary.wiley.com/doi/pdf/10.1002/hep.510240505
+
+[arxiv.org]
+match = -58.8%%
+title = A Survey of Large Language Models
+url = https://arxiv.org/pdf/2303.18223
 
