--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-08-02 05:16:59
+lastsearch = 2024-08-02 05:48:24
 
 [www.instagram.com]
-match = -123.1%%
-title = meow_kikiki - Yuki Chan - Instagram
+match = -30.8%%
+title = meow_kikiki - Yuki Chan
 url = https://www.instagram.com/meow_kikiki/
 
 [www.linkedin.com]
