--- a/images/chieu-nhua-ha-noi-14/config.ini
+++ b/images/chieu-nhua-ha-noi-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-14.html
 lastopen = 2024-06-09 22:51:04
 
 [search]
-lastsearch = 2024-08-02 05:38:57
+lastsearch = 2024-08-02 05:44:14
 
 [www.diepxuan.com]
 match = 10.0%%
 title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html?srsltid=AfmBOooOgW_gcKYM8ZTMtD0wN6kM8koIQHC56NtZTQj8Vq7CveKzisTR
 
 [shopee.vn]
-match = 40.0%%
-title = Chiếu nhựa gập đôi (SIZE TO)
-url = https://shopee.vn/Chiếu-nhựa-gập-đôi-(SIZE-TO)-i.143185988.9645242088
+match = -85.0%%
+title = Chiếu Nhựa Mai Huyền Hà Nội 1,5m , 1,6m , 1m8,1m8x3m ...
+url = https://shopee.vn/Chiếu-Nhựa-Mai-Huyền-Hà-Nội-1-5m-1-6m-1m8-1m8x3m-1m8x4m-i.81313558.12532512757
 
 [tchome.vn]
 match = 20.0%%
@@ -28,8 +28,8 @@ url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
 
 [www.yellowpages.vn]
 match = 10.0%%
-title = danh sách Chiếu Nhựa
-url = https://www.yellowpages.vn/tgcls/10490435/Chiếu-Nhựa.html?j=0
+title = chiếu nhựa, chiếu cói ở tại hà nội
+url = https://www.yellowpages.vn/class/490435/chiếu-nhựa,-chiếu-cói-ở_hà-nội.html
 
 [trangvangvietnam.com]
 match = -90.0%%
