--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-08-02 04:30:09
+lastsearch = 2024-08-02 06:00:30
 
 [en.wikipedia.org]
 match = 15.0%%
@@ -82,9 +82,9 @@ title =
 url = https://www.icmec.org/wp-content/uploads/2019/01/ICMEC-South-Korea-National-Legislation-updated.pdf
 
 [cryptonews.com]
-match = -105.0%%
-title = Riot Platforms Reports Q2 Loss After Bitcoin Halving
-url = https://cryptonews.com/news/riot-platforms-reports-q2-loss-after-bitcoin-halving.htm
+match = -140.0%%
+title = Bitcoin Miner CleanSpark Expands with New Facilities in ...
+url = https://cryptonews.com/news/bitcoin-miner-cleanspark-expands-with-new-facilities-in-wyoming-and-tennessee.htm
 
 [www.thespike.gg]
 match = -75.0%%
