--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-260-300.html
 lastopen = 2024-06-07 00:15:36
 
 [search]
-lastsearch = 2024-08-02 04:22:13
+lastsearch = 2024-08-02 05:57:23
 
 [www.cms.gov]
 match = 4.5%%
@@ -128,8 +128,8 @@ url = https://www.stern.nyu.edu/sites/default/files/assets/documents/STERNbusine
 
 [www.ncbi.nlm.nih.gov]
 match = -118.2%%
-title = Protein acylation: mechanisms, biological functions and ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9797573/
+title = Wnt Signaling in Brain Tumors: A Challenging Therapeutic ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10215617/
 
 [westsideobserver.com]
 match = -58.3%%
@@ -227,9 +227,9 @@ title = MAPA 2035 Long Range Transportation Plan
 url = https://mapacog.org/wp-content/uploads/2015/10/LRTP_2035_Amendment2.pdf
 
 [www.ars-grin.gov]
-match = -18.2%%
-title = Plant Inventory No. 199, Part II
-url = https://www.ars-grin.gov/npgs/pi_books/scans/pi199pt2.pdf
+match = 13.6%%
+title = Plant Inventory No. 205
+url = https://www.ars-grin.gov/npgs/pi_books/scans/pi205.pdf
 
 [www.iowa-city.org]
 match = -45.5%%
@@ -665,4 +665,14 @@ url = https://pw.lacounty.gov/dsg/DisasterRoutes/map/Los Angeles Valley Area.pdf
 match = 0.0%%
 title = 
 url = https://www.adb.org/business/how-to/what-does-it-mean-be-debarred-adb
+
+[www.aetna.com]
+match = -81.8%%
+title = Tumor Markers - Medical Clinical Policy Bulletins
+url = https://www.aetna.com/cpb/medical/data/300_399/0352.html
+
+[www.ecohealthalliance.org]
+match = -59.1%%
+title = R01AI163118-Daszak-PI-Full-Proposal.pdf
+url = https://www.ecohealthalliance.org/wp-content/uploads/2023/03/R01AI163118-Daszak-PI-Full-Proposal.pdf
 
